# compress-file

./: BUILD.ps1  BUILD.sh  BUILD_gcc.bat  CMakeLists.txt  Makefile  README.md  RUN.ps1  RUN.sh
include/: huffman.h
src/: huffman.c  main.c
